--- a/css/main.css
+++ b/css/main.css
@@ -400,6 +400,10 @@
     top: calc(50% + 40px);
 }
 
+#mainInputBlock .activeCategoryInputContainer .categoryInputContent {
+    border-radius: 16px;
+}
+
 
 
 
