--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@
 
 #togetherContent .submitButton{
     margin-top: 30px;
+    margin-left: 0px;
 }
 
 #togetherContentMain {
@@ -473,7 +474,7 @@
     
 
     #togetherChat {
-        width: 360px;
+        width: 340px;
         top: 125px;
     }
 
