--- a/css/all.css
+++ b/css/all.css
@@ -2286,6 +2286,10 @@ h3 {
 
 @media screen and (max-width: 767px) {
 
+    .activeAccountNavElemHint {
+        right: -5px;
+    }
+
     #mainInputBlock .categoryInputContent {
         width: 288px;
     }
