--- a/css/arendatorMain.css
+++ b/css/arendatorMain.css
@@ -194,6 +194,15 @@
     display: flex;
     justify-content: left;
     align-items: center;
+    transition: .2s;
+    cursor: pointer;
+}
+
+.flexDealBlock:hover {
+    transform: translateY(-3px);
+    /* transform: scale(1.01); */
+    box-shadow: 0px 8px 16px rgba(8, 24, 81, 0.08);
+    transition: .2s;
 }
 
 .flexDealBlockPersonal {
@@ -209,11 +218,17 @@
     position: relative;
 }
 
+.flexDealBlockPersonal:hover .statusText{
+    opacity: 2;
+    transition: .2s;
+}
+
 .statusPoint {
     width: 12px;
     height: 12px;
     border-radius: 50%;
     background: #F4B740;
+    transition: .2s;
 }
 
 .statusText {
@@ -227,6 +242,7 @@
     letter-spacing: 0.03em;
     
     color: #F4B740;
+    transition: .2s;
 }
 
 .statusDate {
@@ -343,6 +359,13 @@
     /* light grey */
 
     color: #7993AF;
+    transition: .2s;
+}
+
+.flexDealBlockMainInfoBlock:hover .infoBlockHint {
+
+    color: #4E4B66;
+    transition: .2s;
 }
 
 .infoBlockContent {
@@ -379,6 +402,8 @@
 }
 
 .submitText {
+    transition: .2s;
+    cursor: pointer;
     width: 100%;
     font-style: normal;
     font-weight: normal;
@@ -394,7 +419,12 @@
 
     position: absolute;
     text-align: center;
-    bottom: 4px;
+    bottom: 2px;
+}
+
+.submitText:hover {
+    transition: .2s;
+    color: #07273F;
 }
 
 .onConfirmation {
