--- a/css/all.css
+++ b/css/all.css
@@ -58,6 +58,8 @@ h3 {
 
 .notDisplay {
     height: 0 !important;
+    /* max-height: 0 !important; */
+    /* min-height: 0 !important; */
     overflow: hidden;
     transition: .5s;
 }
@@ -260,7 +262,7 @@ h3 {
     top: 0;
     left: 0;
     background-color: #F5F6F9;
-    z-index: 3;
+    z-index: 100;
     transition: .5s;
     overflow: hidden;
 }
@@ -343,7 +345,7 @@ h3 {
 
 #absolutedHamburgerTextContent {
     padding-left: 25px;
-    padding-top: 160px;
+    padding-top: calc(50vh - 80px);
 }
 
 #hamburger {
@@ -619,6 +621,21 @@ h3 {
     font-weight: normal;
     font-size: 16px;
     line-height: 16px;
+    /* identical to box height */
+
+    letter-spacing: 0.02em;
+
+    /* light grey */
+
+    color: #7993AF;
+}
+
+#mainInputBlock .input .inputContent::-moz-placeholder {
+    font-family: 'Commissioner', sans-serif;
+    /* padding-left: 20px; */
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 60px;
     /* identical to box height */
 
     letter-spacing: 0.02em;
@@ -1967,6 +1984,9 @@ h3 {
 
     #absolutedHamburger {
         height: 100%;
+        /* min-height: 600px; */
+        overflow-x: hidden;
+        overflow-y: scroll;
     }
 
     #hamburger {
@@ -1998,7 +2018,7 @@ h3 {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding-top: 300px;
+        /* padding-top: 300px; */
         padding-left: 0px;
     }
 
@@ -2122,7 +2142,7 @@ h3 {
     #mainInputBlock {
         margin: auto;
         width: 728px;
-        height: max-content;
+        height: auto;
         display: block;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -2460,7 +2480,7 @@ h3 {
         align-items: unset;
         justify-content: unset;
         padding-left: 25px;
-        padding-top: 160px;
+        padding-top: calc(50vh - 160px);
         position: absolute;
         left: calc(50% - 100px);
     }
@@ -2599,7 +2619,7 @@ h3 {
         margin: auto;
         margin-top: 20px;
         width: 312px;
-        height: max-content;
+        height: auto;
         display: block;
         padding-top: 12px;
         padding-bottom: 20px;
