--- a/css/all.css
+++ b/css/all.css
@@ -41,7 +41,7 @@ h3 {
 * {
     box-sizing: border-box;
     outline: none !important;
-    user-select: none;
+    /* user-select: none; */
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
