--- a/css/all.css
+++ b/css/all.css
@@ -2604,6 +2604,7 @@ h3 {
 
     .soldText {
         max-width: 312px;
+        margin-top: 10px;
     }
     
     .soldTextMain h1 {
@@ -2614,6 +2615,8 @@ h3 {
         font-size: 12px;
         margin-right: 24px;
         margin-left: 24px;
+        line-height: 21px;
+        margin-top: 0px;
     }
 
     #mainInputBlock {
