--- a/css/all.css
+++ b/css/all.css
@@ -14,6 +14,7 @@ body {
     font-size: 16px;
     overflow-x: hidden;
     max-width: 100%;
+    width: 100%;
     position: relative;
 }
 
@@ -53,7 +54,7 @@ h3 {
     width: 100%;
     max-width: 1366px;
     margin: auto;
-    position: relative;
+    /* position: relative; */
 }
 
 .notDisplay {
