--- a/css/all.css
+++ b/css/all.css
@@ -378,7 +378,14 @@ h3 {
 #navLogoImage {
     width: 150px;
     height: 65px;
-    background-color: #C4C4C4;
+    /* background-color: #C4C4C4; */
+    position: relative;
+}
+
+#navLogoImage img{
+    height: auto;
+    width: 100%;
+    /* margin: auto; */
 }
 
 #navLogoContent {
@@ -2077,7 +2084,8 @@ h3 {
     #navLogoImage {
         width: 88px;
         height: 39px;
-        background-color: #C4C4C4;
+        padding-top: 5px;
+        /* background-color: #C4C4C4; */
     }
     
     #navLogoContent {
@@ -2542,7 +2550,7 @@ h3 {
     #navLogoImage {
         width: 88px;
         height: 39px;
-        background-color: #C4C4C4;
+        /* background-color: #C4C4C4; */
     }
     
     #navLogoContent {
